pattern-wishcast/tests/ui/upcast_mut_unsound.stderr
error[E0599]: no method named `to_partial_mut` found for enum `Value<P>` in the current scope
  --> tests/ui/upcast_mut_unsound.rs:37:48
   |
 7 | / pattern_wishcast! {
 8 | |     // Define a base value enum that can be None or Some
 9 | |     enum Value is <P: PatternFields> = {
10 | |         None,
...  |
22 | |     impl CompleteValue : PartialValue;
23 | | }
   | |_- method `to_partial_mut` not found for this enum
...
37 |       let partial_mut: &mut PartialValue = complete.to_partial_mut();
   |                                                     ^^^^^^^^^^^^^^
   |
help: there is a method `to_partial` with a similar name
   |
37 -     let partial_mut: &mut PartialValue = complete.to_partial_mut();
37 +     let partial_mut: &mut PartialValue = complete.to_partial();
   |

warning: unreachable statement
  --> tests/ui/upcast_mut_unsound.rs:55:2
   |
47 | /     match complete {
48 | |         CompleteValue::Some(n) => {
49 | |             println!("Value: {}", n);
50 | |             return;
...  |
53 | |     }
   | |_____- any code following this `match` expression is unreachable, as all arms diverge
54 |
55 |       unreachable!("Should not be possible to reach this");
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default
